Fixed checkbox not showing on edge browser (#3102)

--- a/frappe/public/css/desk.css
+++ b/frappe/public/css/desk.css
@@ -975,3 +975,8 @@ input[type="checkbox"]:checked:before {
     visibility: visible;
   }
 }
+@supports (-ms-ime-align:auto) {
+  input[type="checkbox"] {
+    visibility: visible;
+  }
+}
